--- a/src/Pages/Layout/Layout.css
+++ b/src/Pages/Layout/Layout.css
@@ -10,3 +10,9 @@
     background-color: white;
     width: 100%;
 }
+.Layout nav ul li a{
+    text-decoration: none;
+    list-style: none;
+    font-size: larger;
+    color: blueviolet;
+}
