--- a/src/components/MainMemu/MainMenu.css
+++ b/src/components/MainMemu/MainMenu.css
@@ -1,9 +1,7 @@
 .Wrapper {
     display: flex;
     flex-direction: column;
-    align-items: stretch;
     justify-content: center;
-    align-content: space-around;
     flex-wrap: nowrap;
     width: 100%;
     height: 100%;
@@ -13,5 +11,10 @@
     border: 1px solid lightskyblue;
     flex-grow: 1;
     margin: 1em;
-    background: linear-gradient(to bottom, lightskyblue 0%, lightblue 100%);
+    padding-left: 3em;
+    background-image: url("../../img/set_hands.jpg"), linear-gradient(to bottom, lightskyblue 0%, lightblue 100%);
+}
+.Link a {
+    text-decoration: none;
+    list-style: none;
 }
